--- a/Pomodoro/Base.lproj/Main.storyboard
+++ b/Pomodoro/Base.lproj/Main.storyboard
@@ -713,9 +713,17 @@
                                 </connections>
                             </button>
                             <levelIndicator verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sSP-Ig-Prs">
-                                <rect key="frame" x="60" y="60" width="348" height="18"/>
-                                <levelIndicatorCell key="cell" alignment="left" maxValue="10" warningValue="1" id="0gD-oO-hO1"/>
+                                <rect key="frame" x="150" y="60" width="258" height="18"/>
+                                <levelIndicatorCell key="cell" alignment="left" maxValue="10" id="0gD-oO-hO1"/>
                             </levelIndicator>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZvT-gP-tQt">
+                                <rect key="frame" x="67" y="59" width="82" height="24"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Session:" id="EPr-Fl-28h">
+                                    <font key="font" size="20" name="SofiaProLight"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
                         </subviews>
                     </view>
                     <connections>
